cmake_minimum_required(VERSION 3.10)
project(SMNcoin)

set(CMAKE_CXX_STANDARD 11)

include_directories(src)
include_directories(src/compat)
include_directories(src/config)
include_directories(src/crypto)
include_directories(src/json)
include_directories(src/leveldb/db)
include_directories(src/leveldb/helpers/memenv)
include_directories(src/leveldb/include)
include_directories(src/leveldb/include/leveldb)
include_directories(src/leveldb/port)
include_directories(src/leveldb/port/win)
include_directories(src/leveldb/table)
include_directories(src/leveldb/util)
include_directories(src/libzerocoin)
include_directories(src/primitives)
include_directories(src/qt)
include_directories(src/qt/test)
include_directories(src/script)
include_directories(src/secp256k1/include)
include_directories(src/secp256k1/src)
include_directories(src/secp256k1/src/java)
include_directories(src/test)
include_directories(src/univalue)
include_directories(src/zmq)

add_executable(SMNcoin
        autom4te.cache/output.0
        autom4te.cache/output.1
        autom4te.cache/requests
        autom4te.cache/traces.0
        autom4te.cache/traces.1
        build-aux/m4/ax_boost_base.m4
        build-aux/m4/ax_boost_chrono.m4
        build-aux/m4/ax_boost_filesystem.m4
        build-aux/m4/ax_boost_program_options.m4
        build-aux/m4/ax_boost_system.m4
        build-aux/m4/ax_boost_thread.m4
        build-aux/m4/ax_boost_unit_test_framework.m4
        build-aux/m4/ax_check_compile_flag.m4
        build-aux/m4/ax_check_link_flag.m4
        build-aux/m4/ax_check_preproc_flag.m4
        build-aux/m4/ax_cxx_compile_stdcxx.m4
        build-aux/m4/ax_gcc_func_attribute.m4
        build-aux/m4/ax_pthread.m4
        build-aux/m4/bitcoin_find_bdb48.m4
        build-aux/m4/bitcoin_qt.m4
        build-aux/m4/bitcoin_subdir_to_include.m4
        build-aux/m4/libtool.m4
        build-aux/m4/ltoptions.m4
        build-aux/m4/ltsugar.m4
        build-aux/m4/ltversion.m4
        build-aux/m4/lt~obsolete.m4
        build-aux/compile
        build-aux/config.guess
        build-aux/config.sub
        build-aux/depcomp
        build-aux/install-sh
        build-aux/ltmain.sh
        build-aux/missing
        build-aux/test-driver
        contrib/bitrpc/bitrpc.py
        contrib/bitrpc/README.md
        contrib/debian/examples/jiyo.conf
        contrib/debian/manpages/jiyo-qt.1
        contrib/debian/manpages/jiyo.conf.5
        contrib/debian/manpages/jiyod.1
        contrib/debian/patches/README
        contrib/debian/patches/series
        contrib/debian/source/format
        contrib/debian/changelog
        contrib/debian/compat
        contrib/debian/control
        contrib/debian/copyright
        contrib/debian/gbp.conf
        contrib/debian/jiyo-qt.desktop
        contrib/debian/jiyo-qt.install
        contrib/debian/jiyo-qt.lintian-overrides
        contrib/debian/jiyo-qt.protocol
        contrib/debian/jiyod.bash-completion
        contrib/debian/jiyod.examples
        contrib/debian/jiyod.install
        contrib/debian/jiyod.lintian-overrides
        contrib/debian/jiyod.manpages
        contrib/debian/README.md
        contrib/debian/rules
        contrib/debian/watch
        contrib/devtools/check-doc.py
        contrib/devtools/fix-copyright-headers.py
        contrib/devtools/github-merge.py
        contrib/devtools/README.md
        contrib/devtools/split-debug.sh.in
        contrib/devtools/symbol-check.py
        contrib/devtools/update-translations.py
        contrib/gitian-descriptors/gitian-aarch64.yml
        contrib/gitian-descriptors/gitian-linux.yml
        contrib/gitian-descriptors/gitian-osx-signer.yml
        contrib/gitian-descriptors/gitian-osx.yml
        contrib/gitian-descriptors/gitian-rpi2.yml
        contrib/gitian-descriptors/gitian-win-signer.yml
        contrib/gitian-descriptors/gitian-win.yml
        contrib/gitian-descriptors/README.md
        contrib/gitian-downloader/aschildbach-key.pgp
        contrib/gitian-downloader/bluematt-key.pgp
        contrib/gitian-downloader/cfields-key.pgp
        contrib/gitian-downloader/devrandom-key.pgp
        contrib/gitian-downloader/gavinandresen-key.pgp
        contrib/gitian-downloader/laanwj-key.pgp
        contrib/gitian-downloader/linux-download-config
        contrib/gitian-downloader/luke-jr-key.pgp
        contrib/gitian-downloader/michagogo-key.pgp
        contrib/gitian-downloader/sipa-key.pgp
        contrib/gitian-downloader/tcatm-key.pgp
        contrib/gitian-downloader/win32-download-config
        contrib/gitian-downloader/wtogami-key.pgp
        contrib/gitian-keys/1910061019470D0B-key.gpg
        contrib/init/jiyod.conf
        contrib/init/jiyod.init
        contrib/init/jiyod.openrc
        contrib/init/jiyod.openrcconf
        contrib/init/jiyod.service
        contrib/init/README.md
        contrib/linearize/example-linearize.cfg
        contrib/linearize/linearize-data.py
        contrib/linearize/linearize-hashes.py
        contrib/linearize/README.md
        contrib/macdeploy/background.svg
        contrib/macdeploy/custom_dsstore.py
        contrib/macdeploy/detached-sig-apply.sh
        contrib/macdeploy/detached-sig-create.sh
        contrib/macdeploy/fancy.plist
        contrib/macdeploy/LICENSE
        contrib/macdeploy/macdeployqtplus
        contrib/macdeploy/README.md
        contrib/qos/README.md
        contrib/qos/tc.sh
        contrib/seeds/generate-seeds.py
        contrib/seeds/makeseeds.py
        contrib/seeds/README.md
        contrib/spendfrom/README.md
        contrib/spendfrom/setup.py
        contrib/spendfrom/spendfrom.py
        contrib/test-patches/README.md
        contrib/testgen/base58.py
        contrib/testgen/gen_base58_test_vectors.py
        contrib/testgen/README.md
        contrib/verifysfbinaries/README.md
        contrib/verifysfbinaries/verify.sh
        contrib/zmq/zmq_sub.py
        contrib/gitian-build.sh
        contrib/jiyod.bash-completion
        contrib/qt_translations.py
        contrib/README.md
        contrib/somnio-qt.pro
        contrib/tidy_datadir.sh
        contrib/somnio-qt.pro
        depends/builders/darwin.mk
        depends/builders/default.mk
        depends/builders/linux.mk
        depends/hosts/darwin.mk
        depends/hosts/default.mk
        depends/hosts/linux.mk
        depends/hosts/mingw32.mk
        depends/packages/bdb.mk
        depends/packages/boost.mk
        depends/packages/dbus.mk
        depends/packages/expat.mk
        depends/packages/fontconfig.mk
        depends/packages/freetype.mk
        depends/packages/libevent.mk
        depends/packages/libICE.mk
        depends/packages/libSM.mk
        depends/packages/libX11.mk
        depends/packages/libXau.mk
        depends/packages/libxcb.mk
        depends/packages/libXext.mk
        depends/packages/miniupnpc.mk
        depends/packages/native_biplist.mk
        depends/packages/native_ccache.mk
        depends/packages/native_cctools.mk
        depends/packages/native_cdrkit.mk
        depends/packages/native_ds_store.mk
        depends/packages/native_libdmg-hfsplus.mk
        depends/packages/native_mac_alias.mk
        depends/packages/native_protobuf.mk
        depends/packages/openssl.mk
        depends/packages/packages.mk
        depends/packages/protobuf.mk
        depends/packages/qrencode.mk
        depends/packages/qt.mk
        depends/packages/xcb_proto.mk
        depends/packages/xextproto.mk
        depends/packages/xproto.mk
        depends/packages/xtrans.mk
        depends/packages/zeromq.mk
        depends/packages/zlib.mk
        depends/patches/native_biplist/sorted_list.patch
        depends/patches/native_cdrkit/cdrkit-deterministic.patch
        depends/patches/native_mac_alias/python3.patch
        depends/patches/qt/aarch32-qmake.conf
        depends/patches/qt/fix-xcb-include-order.patch
        depends/patches/qt/fix_qt_pkgconfig.patch
        depends/patches/qt/mac-qmake.conf
        depends/patches/qt/mingw-uuidof.patch
        depends/patches/qt/pidlist_absolute.patch
        depends/patches/xextproto/fix_aarch64_build.patch
        depends/patches/zeromq/9114d3957725acd34aa8b8d011585812f3369411.patch
        depends/patches/zeromq/9e6745c12e0b100cd38acecc16ce7db02905e27c.patch
        depends/.gitignore
        depends/config.guess
        depends/config.site.in
        depends/config.sub
        depends/description.md
        depends/funcs.mk
        depends/Makefile
        depends/packages.md
        depends/README.md
        doc/gitian-building/create_vm_file_location_size.png
        doc/gitian-building/create_vm_hard_drive.png
        doc/gitian-building/create_vm_hard_drive_file_type.png
        doc/gitian-building/create_vm_memsize.png
        doc/gitian-building/create_vm_page1.png
        doc/gitian-building/create_vm_storage_physical_hard_drive.png
        doc/gitian-building/debian_install_10_configure_clock.png
        doc/gitian-building/debian_install_11_partition_disks.png
        doc/gitian-building/debian_install_12_choose_disk.png
        doc/gitian-building/debian_install_13_partition_scheme.png
        doc/gitian-building/debian_install_14_finish.png
        doc/gitian-building/debian_install_15_write_changes.png
        doc/gitian-building/debian_install_16_choose_a_mirror.png
        doc/gitian-building/debian_install_17_choose_a_mirror2.png
        doc/gitian-building/debian_install_18_proxy_settings.png
        doc/gitian-building/debian_install_19_software_selection.png
        doc/gitian-building/debian_install_1_boot_menu.png
        doc/gitian-building/debian_install_20_install_grub.png
        doc/gitian-building/debian_install_21_finish_installation.png
        doc/gitian-building/debian_install_2_select_a_language.png
        doc/gitian-building/debian_install_3_select_location.png
        doc/gitian-building/debian_install_4_configure_keyboard.png
        doc/gitian-building/debian_install_5_configure_the_network.png
        doc/gitian-building/debian_install_6_domain_name.png
        doc/gitian-building/debian_install_6a_set_up_root_password.png
        doc/gitian-building/debian_install_7_set_up_user_fullname.png
        doc/gitian-building/debian_install_8_set_up_username.png
        doc/gitian-building/debian_install_9_user_password.png
        doc/gitian-building/network_settings.png
        doc/gitian-building/port_forwarding_rules.png
        doc/gitian-building/select_startup_disk.png
        doc/img/bootstrap1.png
        doc/img/bootstrap2.png
        doc/img/bootstrap4.png
        doc/img/bootstrap5.png
        doc/assets-attribution.md
        doc/bitcoin_logo_doxygen.png
        doc/bootstrap.md
        doc/build-osx.md
        doc/build-unix.md
        doc/developer-notes.md
        doc/dnsseed-policy.md
        doc/Doxyfile
        doc/files.md
        doc/gitian-building.md
        doc/guide-startmany.md
        doc/init.md
        doc/keepass.md
        doc/masternode-budget.md
        doc/masternode_conf.md
        doc/multiwallet-qt.md
        doc/README.md
        doc/README_osx.md
        doc/README_windows.txt
        doc/release-notes.md
        doc/release-process.md
        doc/REST-interface.md
        doc/swifttx.md
        doc/tor.md
        doc/translation_process.md
        doc/travis-ci.txt
        doc/unit-tests.md
        doc/zmq.md
        nbproject/private/c_standard_headers_indexer.c
        nbproject/private/configurations.xml
        nbproject/private/cpp_standard_headers_indexer.cpp
        nbproject/private/launcher.properties
        nbproject/private/private.xml
        nbproject/configurations.xml
        nbproject/project.xml
        qa/pull-tester/run-bitcoind-for-test.sh.in
        qa/pull-tester/tests-config.sh.in
        share/certs/BitcoinFoundation_Apple_Cert.pem
        share/certs/BitcoinFoundation_Comodo_Cert.pem
        share/certs/PrivateKeyNotes.md
        share/pixmaps/addressbook16.bmp
        share/pixmaps/addressbook16mask.bmp
        share/pixmaps/addressbook20.bmp
        share/pixmaps/addressbook20mask.bmp
        share/pixmaps/bitcoin-bc.ico
        share/pixmaps/bitcoin.ico
        share/pixmaps/bitcoin128.png
        share/pixmaps/bitcoin128.xpm
        share/pixmaps/bitcoin16.png
        share/pixmaps/bitcoin16.xpm
        share/pixmaps/bitcoin256.png
        share/pixmaps/bitcoin256.xpm
        share/pixmaps/bitcoin32.png
        share/pixmaps/bitcoin32.xpm
        share/pixmaps/bitcoin64.png
        share/pixmaps/bitcoin64.xpm
        share/pixmaps/check.ico
        share/pixmaps/favicon.ico
        share/pixmaps/nsis-header.bmp
        share/pixmaps/nsis-wizard.bmp
        share/pixmaps/send16.bmp
        share/pixmaps/send16mask.bmp
        share/pixmaps/send16masknoshadow.bmp
        share/pixmaps/send20.bmp
        share/pixmaps/send20mask.bmp
        share/qt/img/reload.png
        share/qt/img/reload.xcf
        share/qt/extract_strings_qt.py
        share/qt/Info.plist.in
        share/qt/make_spinner.py
        share/qt/make_windows_icon.sh
        share/qt/protobuf.pri
        share/genbuild.sh
        share/Info.plist
        share/setup.nsi.in
        share/ui.rc
        src/compat/glibc_compat.cpp
        src/compat/glibc_sanity.cpp
        src/compat/glibcxx_compat.cpp
        src/compat/glibcxx_sanity.cpp
        src/compat/sanity.h
        src/compat/strnlen.cpp
        src/config/.empty
        src/config/somnio-config.h.in
        src/config/somnio-config.h
        src/config/somnio-config.h.in
        src/crypto/aes_helper.c
        src/crypto/blake.c
        src/crypto/bmw.c
        src/crypto/common.h
        src/crypto/cubehash.c
        src/crypto/echo.c
        src/crypto/fugue.c
        src/crypto/groestl.c
        src/crypto/hamsi.c
        src/crypto/hamsi_helper.c
        src/crypto/haval.c
        src/crypto/haval_helper.c
        src/crypto/hmac_sha256.cpp
        src/crypto/hmac_sha256.h
        src/crypto/hmac_sha512.cpp
        src/crypto/hmac_sha512.h
        src/crypto/jh.c
        src/crypto/keccak.c
        src/crypto/libbitcoin_crypto.a
        src/crypto/luffa.c
        src/crypto/md_helper.c
        src/crypto/rfc6979_hmac_sha256.cpp
        src/crypto/rfc6979_hmac_sha256.h
        src/crypto/ripemd160.cpp
        src/crypto/ripemd160.h
        src/crypto/scrypt.cpp
        src/crypto/scrypt.h
        src/crypto/sha1.cpp
        src/crypto/sha1.h
        src/crypto/sha2.c
        src/crypto/sha256.cpp
        src/crypto/sha256.h
        src/crypto/sha512.cpp
        src/crypto/sha512.h
        src/crypto/shabal.c
        src/crypto/shavite.c
        src/crypto/simd.c
        src/crypto/skein.c
        src/crypto/sph_blake.h
        src/crypto/sph_bmw.h
        src/crypto/sph_cubehash.h
        src/crypto/sph_echo.h
        src/crypto/sph_fugue.h
        src/crypto/sph_groestl.h
        src/crypto/sph_hamsi.h
        src/crypto/sph_haval.h
        src/crypto/sph_jh.h
        src/crypto/sph_keccak.h
        src/crypto/sph_luffa.h
        src/crypto/sph_md_helper.c
        src/crypto/sph_sha2.h
        src/crypto/sph_sha2big.c
        src/crypto/sph_shabal.h
        src/crypto/sph_shavite.h
        src/crypto/sph_simd.h
        src/crypto/sph_skein.h
        src/crypto/sph_types.h
        src/crypto/sph_whirlpool.h
        src/crypto/whirlpool.c
        src/json/json_spirit.h
        src/json/json_spirit_error_position.h
        src/json/json_spirit_reader.cpp
        src/json/json_spirit_reader.h
        src/json/json_spirit_reader_template.h
        src/json/json_spirit_stream_reader.h
        src/json/json_spirit_utils.h
        src/json/json_spirit_value.cpp
        src/json/json_spirit_value.h
        src/json/json_spirit_writer.cpp
        src/json/json_spirit_writer.h
        src/json/json_spirit_writer_template.h
        src/json/LICENSE.txt
        src/leveldb/db/autocompact_test.cc
        src/leveldb/db/builder.cc
        src/leveldb/db/builder.h
        src/leveldb/db/c.cc
        src/leveldb/db/c_test.c
        src/leveldb/db/corruption_test.cc
        src/leveldb/db/db_bench.cc
        src/leveldb/db/db_impl.cc
        src/leveldb/db/db_impl.h
        src/leveldb/db/db_iter.cc
        src/leveldb/db/db_iter.h
        src/leveldb/db/db_test.cc
        src/leveldb/db/dbformat.cc
        src/leveldb/db/dbformat.h
        src/leveldb/db/dbformat_test.cc
        src/leveldb/db/dumpfile.cc
        src/leveldb/db/filename.cc
        src/leveldb/db/filename.h
        src/leveldb/db/filename_test.cc
        src/leveldb/db/leveldb_main.cc
        src/leveldb/db/log_format.h
        src/leveldb/db/log_reader.cc
        src/leveldb/db/log_reader.h
        src/leveldb/db/log_test.cc
        src/leveldb/db/log_writer.cc
        src/leveldb/db/log_writer.h
        src/leveldb/db/memtable.cc
        src/leveldb/db/memtable.h
        src/leveldb/db/repair.cc
        src/leveldb/db/skiplist.h
        src/leveldb/db/skiplist_test.cc
        src/leveldb/db/snapshot.h
        src/leveldb/db/table_cache.cc
        src/leveldb/db/table_cache.h
        src/leveldb/db/version_edit.cc
        src/leveldb/db/version_edit.h
        src/leveldb/db/version_edit_test.cc
        src/leveldb/db/version_set.cc
        src/leveldb/db/version_set.h
        src/leveldb/db/version_set_test.cc
        src/leveldb/db/write_batch.cc
        src/leveldb/db/write_batch_internal.h
        src/leveldb/db/write_batch_test.cc
        src/leveldb/doc/bench/db_bench_sqlite3.cc
        src/leveldb/doc/bench/db_bench_tree_db.cc
        src/leveldb/doc/benchmark.html
        src/leveldb/doc/doc.css
        src/leveldb/doc/impl.html
        src/leveldb/doc/index.html
        src/leveldb/doc/log_format.txt
        src/leveldb/doc/table_format.txt
        src/leveldb/helpers/memenv/memenv.cc
        src/leveldb/helpers/memenv/memenv.h
        src/leveldb/helpers/memenv/memenv_test.cc
        src/leveldb/include/leveldb/c.h
        src/leveldb/include/leveldb/cache.h
        src/leveldb/include/leveldb/comparator.h
        src/leveldb/include/leveldb/db.h
        src/leveldb/include/leveldb/dumpfile.h
        src/leveldb/include/leveldb/env.h
        src/leveldb/include/leveldb/filter_policy.h
        src/leveldb/include/leveldb/iterator.h
        src/leveldb/include/leveldb/options.h
        src/leveldb/include/leveldb/slice.h
        src/leveldb/include/leveldb/status.h
        src/leveldb/include/leveldb/table.h
        src/leveldb/include/leveldb/table_builder.h
        src/leveldb/include/leveldb/write_batch.h
        src/leveldb/issues/issue178_test.cc
        src/leveldb/issues/issue200_test.cc
        src/leveldb/port/win/stdint.h
        src/leveldb/port/atomic_pointer.h
        src/leveldb/port/port.h
        src/leveldb/port/port_example.h
        src/leveldb/port/port_posix.cc
        src/leveldb/port/port_posix.h
        src/leveldb/port/port_win.cc
        src/leveldb/port/port_win.h
        src/leveldb/port/README
        src/leveldb/port/thread_annotations.h
        src/leveldb/table/block.cc
        src/leveldb/table/block.h
        src/leveldb/table/block_builder.cc
        src/leveldb/table/block_builder.h
        src/leveldb/table/filter_block.cc
        src/leveldb/table/filter_block.h
        src/leveldb/table/filter_block_test.cc
        src/leveldb/table/format.cc
        src/leveldb/table/format.h
        src/leveldb/table/iterator.cc
        src/leveldb/table/iterator_wrapper.h
        src/leveldb/table/merger.cc
        src/leveldb/table/merger.h
        src/leveldb/table/table.cc
        src/leveldb/table/table_builder.cc
        src/leveldb/table/table_test.cc
        src/leveldb/table/two_level_iterator.cc
        src/leveldb/table/two_level_iterator.h
        src/leveldb/util/arena.cc
        src/leveldb/util/arena.h
        src/leveldb/util/arena_test.cc
        src/leveldb/util/bloom.cc
        src/leveldb/util/bloom_test.cc
        src/leveldb/util/cache.cc
        src/leveldb/util/cache_test.cc
        src/leveldb/util/coding.cc
        src/leveldb/util/coding.h
        src/leveldb/util/coding_test.cc
        src/leveldb/util/comparator.cc
        src/leveldb/util/crc32c.cc
        src/leveldb/util/crc32c.h
        src/leveldb/util/crc32c_test.cc
        src/leveldb/util/env.cc
        src/leveldb/util/env_posix.cc
        src/leveldb/util/env_test.cc
        src/leveldb/util/env_win.cc
        src/leveldb/util/filter_policy.cc
        src/leveldb/util/hash.cc
        src/leveldb/util/hash.h
        src/leveldb/util/hash_test.cc
        src/leveldb/util/histogram.cc
        src/leveldb/util/histogram.h
        src/leveldb/util/logging.cc
        src/leveldb/util/logging.h
        src/leveldb/util/mutexlock.h
        src/leveldb/util/options.cc
        src/leveldb/util/posix_logger.h
        src/leveldb/util/random.h
        src/leveldb/util/status.cc
        src/leveldb/util/testharness.cc
        src/leveldb/util/testharness.h
        src/leveldb/util/testutil.cc
        src/leveldb/util/testutil.h
        src/leveldb/AUTHORS
        src/leveldb/build_detect_platform
        src/leveldb/CONTRIBUTING.md
        src/leveldb/LICENSE
        src/leveldb/Makefile
        src/leveldb/NEWS
        src/leveldb/README
        src/leveldb/README.md
        src/leveldb/TODO
        src/leveldb/WINDOWS.md
        src/libzerocoin/documentation/manual/intro.tex
        src/libzerocoin/documentation/manual/manual.pdf
        src/libzerocoin/documentation/manual/manual.tex
        src/libzerocoin/documentation/manual/using.tex
        src/libzerocoin/documentation/Doxyfile
        src/libzerocoin/Accumulator.cpp
        src/libzerocoin/Accumulator.h
        src/libzerocoin/AccumulatorProofOfKnowledge.cpp
        src/libzerocoin/AccumulatorProofOfKnowledge.h
        src/libzerocoin/bignum.h
        src/libzerocoin/Coin.cpp
        src/libzerocoin/Coin.h
        src/libzerocoin/CoinSpend.cpp
        src/libzerocoin/CoinSpend.h
        src/libzerocoin/Commitment.cpp
        src/libzerocoin/Commitment.h
        src/libzerocoin/Denominations.cpp
        src/libzerocoin/Denominations.h
        src/libzerocoin/libbitcoin_zerocoin.a
        src/libzerocoin/LICENSE
        src/libzerocoin/paramgen.cpp
        src/libzerocoin/ParamGeneration.cpp
        src/libzerocoin/ParamGeneration.h
        src/libzerocoin/Params.cpp
        src/libzerocoin/Params.h
        src/libzerocoin/SerialNumberSignatureOfKnowledge.cpp
        src/libzerocoin/SerialNumberSignatureOfKnowledge.h
        src/libzerocoin/zerocoin.pc.in
        src/libzerocoin/ZerocoinDefines.h
        src/obj/.gitignore
        src/obj-test/.gitignore
        src/primitives/block.cpp
        src/primitives/block.h
        src/primitives/transaction.cpp
        src/primitives/transaction.h
        src/primitives/zerocoin.cpp
        src/primitives/zerocoin.h
        src/qt/forms/addressbookpage.ui
        src/qt/forms/askpassphrasedialog.ui
        src/qt/forms/bip38tooldialog.ui
        src/qt/forms/blockexplorer.ui
        src/qt/forms/coincontroldialog.ui
        src/qt/forms/editaddressdialog.ui
        src/qt/forms/helpmessagedialog.ui
        src/qt/forms/intro.ui
        src/qt/forms/masternodelist.ui
        src/qt/forms/multisenddialog.ui
        src/qt/forms/multisigdialog.ui
        src/qt/forms/obfuscationconfig.ui
        src/qt/forms/openuridialog.ui
        src/qt/forms/optionsdialog.ui
        src/qt/forms/overviewpage.ui
        src/qt/forms/privacydialog.ui
        src/qt/forms/receivecoinsdialog.ui
        src/qt/forms/receiverequestdialog.ui
        src/qt/forms/rpcconsole.ui
        src/qt/forms/sendcoinsdialog.ui
        src/qt/forms/sendcoinsentry.ui
        src/qt/forms/signverifymessagedialog.ui
        src/qt/forms/tradingdialog.ui
        src/qt/forms/transactiondescdialog.ui
        src/qt/forms/zsomniocontroldialog.ui
        src/qt/forms/zsomniocontroldialog.ui
        src/qt/locale/somnio_bg.ts
        src/qt/locale/somnio_ca.ts
        src/qt/locale/somnio_cs.ts
        src/qt/locale/somnio_da.ts
        src/qt/locale/somnio_de.ts
        src/qt/locale/somnio_en.ts
        src/qt/locale/somnio_en_US.ts
        src/qt/locale/somnio_es.ts
        src/qt/locale/somnio_fi.ts
        src/qt/locale/somnio_fr_FR.ts
        src/qt/locale/somnio_hr.ts
        src/qt/locale/somnio_it.ts
        src/qt/locale/somnio_ja.ts
        src/qt/locale/somnio_ko_KR.ts
        src/qt/locale/somnio_nl.ts
        src/qt/locale/somnio_pl.ts
        src/qt/locale/somnio_pt.ts
        src/qt/locale/somnio_pt_BR.ts
        src/qt/locale/somnio_ro_RO.ts
        src/qt/locale/somnio_ru.ts
        src/qt/locale/somnio_sk.ts
        src/qt/locale/somnio_sv.ts
        src/qt/locale/somnio_tr.ts
        src/qt/locale/somnio_uk.ts
        src/qt/locale/somnio_zh_CN.ts
        src/qt/locale/somnio_zh_TW.ts
        src/qt/locale/somnio_bg.ts
        src/qt/locale/somnio_ca.ts
        src/qt/locale/somnio_cs.ts
        src/qt/locale/somnio_da.ts
        src/qt/locale/somnio_de.ts
        src/qt/locale/somnio_en.ts
        src/qt/locale/somnio_en_US.ts
        src/qt/locale/somnio_es.ts
        src/qt/locale/somnio_fi.ts
        src/qt/locale/somnio_fr_FR.ts
        src/qt/locale/somnio_hr.ts
        src/qt/locale/somnio_it.ts
        src/qt/locale/somnio_ja.ts
        src/qt/locale/somnio_ko_KR.ts
        src/qt/locale/somnio_nl.ts
        src/qt/locale/somnio_pl.ts
        src/qt/locale/somnio_pt.ts
        src/qt/locale/somnio_pt_BR.ts
        src/qt/locale/somnio_ro_RO.ts
        src/qt/locale/somnio_ru.ts
        src/qt/locale/somnio_sk.ts
        src/qt/locale/somnio_sv.ts
        src/qt/locale/somnio_tr.ts
        src/qt/locale/somnio_uk.ts
        src/qt/locale/somnio_zh_CN.ts
        src/qt/locale/somnio_zh_TW.ts
        src/qt/res/css/bak.css
        src/qt/res/css/default.css
        src/qt/res/css/somnio.css
        src/qt/res/css/somnio.css
        src/qt/res/icons/add.png
        src/qt/res/icons/address-book.png
        src/qt/res/icons/bitcoin.icns
        src/qt/res/icons/bitcoin.ico
        src/qt/res/icons/bitcoin.png
        src/qt/res/icons/bitcoin_testnet.icns
        src/qt/res/icons/bitcoin_testnet.ico
        src/qt/res/icons/bitcoin_testnet.png
        src/qt/res/icons/bittrex.png
        src/qt/res/icons/browse.png
        src/qt/res/icons/clock1.png
        src/qt/res/icons/clock2.png
        src/qt/res/icons/clock3.png
        src/qt/res/icons/clock4.png
        src/qt/res/icons/clock5.png
        src/qt/res/icons/configure.png
        src/qt/res/icons/connect0_16.png
        src/qt/res/icons/connect1_16.png
        src/qt/res/icons/connect2_16.png
        src/qt/res/icons/connect3_16.png
        src/qt/res/icons/connect4_16.png
        src/qt/res/icons/debugwindow.png
        src/qt/res/icons/edit.png
        src/qt/res/icons/editcopy.png
        src/qt/res/icons/editpaste.png
        src/qt/res/icons/explorer.png
        src/qt/res/icons/export.png
        src/qt/res/icons/eye.png
        src/qt/res/icons/eye_minus.png
        src/qt/res/icons/eye_plus.png
        src/qt/res/icons/filesave.png
        src/qt/res/icons/history.png
        src/qt/res/icons/import.png
        src/qt/res/icons/info.png
        src/qt/res/icons/key.png
        src/qt/res/icons/lock_closed.png
        src/qt/res/icons/lock_open.png
        src/qt/res/icons/masternodes.png
        src/qt/res/icons/notsynced.png
        src/qt/res/icons/overview.png
        src/qt/res/icons/privacy.png
        src/qt/res/icons/qrcode.png
        src/qt/res/icons/quit.png
        src/qt/res/icons/receive.png
        src/qt/res/icons/remove.png
        src/qt/res/icons/send.png
        src/qt/res/icons/staking_active.png
        src/qt/res/icons/staking_inactive.png
        src/qt/res/icons/synced.png
        src/qt/res/icons/trade.png
        src/qt/res/icons/transaction0.png
        src/qt/res/icons/transaction2.png
        src/qt/res/icons/transaction_conflicted.png
        src/qt/res/icons/tx_inout.png
        src/qt/res/icons/tx_input.png
        src/qt/res/icons/tx_mined.png
        src/qt/res/icons/tx_output.png
        src/qt/res/icons/unit_msomnio.png
        src/qt/res/icons/unit_somnio.png
        src/qt/res/icons/unit_tmsomnio.png
        src/qt/res/icons/unit_tsomnio.png
        src/qt/res/icons/unit_tusomnio.png
        src/qt/res/icons/unit_usomnio.png
        src/qt/res/images/about.png
        src/qt/res/images/downArrow.png
        src/qt/res/images/downArrow_small.png
        src/qt/res/images/header.png
        src/qt/res/images/leftArrow_small.png
        src/qt/res/images/qtreeview_selected.png
        src/qt/res/images/rightArrow_small.png
        "src/qt/res/images/somnio_logo_horizontal (copy 1).png"
        "src/qt/res/images/somnio_logo_horizontal (copy 2).png"
        src/qt/res/images/somnio_logo_horizontal.png
        src/qt/res/images/somniobg.png
        src/qt/res/images/splash.png
        src/qt/res/images/splash_testnet.png
        src/qt/res/images/upArrow_small.png
        src/qt/res/images/walletFrame.png
        "src/qt/res/images/walletFrame_bg (copy 1).png"
        src/qt/res/images/walletFrame_bg.png
        src/qt/res/movies/spinner-000.png
        src/qt/res/movies/spinner-001.png
        src/qt/res/movies/spinner-002.png
        src/qt/res/movies/spinner-003.png
        src/qt/res/movies/spinner-004.png
        src/qt/res/movies/spinner-005.png
        src/qt/res/movies/spinner-006.png
        src/qt/res/movies/spinner-007.png
        src/qt/res/movies/spinner-008.png
        src/qt/res/movies/spinner-009.png
        src/qt/res/movies/spinner-010.png
        src/qt/res/movies/spinner-011.png
        src/qt/res/movies/spinner-012.png
        src/qt/res/movies/spinner-013.png
        src/qt/res/movies/spinner-014.png
        src/qt/res/movies/spinner-015.png
        src/qt/res/movies/spinner-016.png
        src/qt/res/movies/spinner-017.png
        src/qt/res/movies/spinner-018.png
        src/qt/res/movies/spinner-019.png
        src/qt/res/movies/spinner-020.png
        src/qt/res/movies/spinner-021.png
        src/qt/res/movies/spinner-022.png
        src/qt/res/movies/spinner-023.png
        src/qt/res/movies/spinner-024.png
        src/qt/res/movies/spinner-025.png
        src/qt/res/movies/spinner-026.png
        src/qt/res/movies/spinner-027.png
        src/qt/res/movies/spinner-028.png
        src/qt/res/movies/spinner-029.png
        src/qt/res/movies/spinner-030.png
        src/qt/res/movies/spinner-031.png
        src/qt/res/movies/spinner-032.png
        src/qt/res/movies/spinner-033.png
        src/qt/res/movies/spinner-034.png
        src/qt/res/src/bitcoin.svg
        src/qt/res/src/clock1.svg
        src/qt/res/src/clock2.svg
        src/qt/res/src/clock3.svg
        src/qt/res/src/clock4.svg
        src/qt/res/src/clock5.svg
        src/qt/res/src/clock_green.svg
        src/qt/res/src/inout.svg
        src/qt/res/src/questionmark.svg
        src/qt/res/wrk/icons1/add.png
        src/qt/res/wrk/icons1/address-book.png
        src/qt/res/wrk/icons1/bitcoin.icns
        src/qt/res/wrk/icons1/bitcoin.ico
        src/qt/res/wrk/icons1/bitcoin.png
        src/qt/res/wrk/icons1/bitcoin_testnet.icns
        src/qt/res/wrk/icons1/bitcoin_testnet.ico
        src/qt/res/wrk/icons1/bitcoin_testnet.png
        src/qt/res/wrk/icons1/bittrex.png
        src/qt/res/wrk/icons1/browse.png
        src/qt/res/wrk/icons1/clock1.png
        src/qt/res/wrk/icons1/clock2.png
        src/qt/res/wrk/icons1/clock3.png
        src/qt/res/wrk/icons1/clock4.png
        src/qt/res/wrk/icons1/clock5.png
        src/qt/res/wrk/icons1/configure.png
        src/qt/res/wrk/icons1/connect0_16.png
        src/qt/res/wrk/icons1/connect1_16.png
        src/qt/res/wrk/icons1/connect2_16.png
        src/qt/res/wrk/icons1/connect3_16.png
        src/qt/res/wrk/icons1/connect4_16.png
        src/qt/res/wrk/icons1/debugwindow.png
        src/qt/res/wrk/icons1/edit.png
        src/qt/res/wrk/icons1/editcopy.png
        src/qt/res/wrk/icons1/editpaste.png
        src/qt/res/wrk/icons1/explorer.png
        src/qt/res/wrk/icons1/export.png
        src/qt/res/wrk/icons1/eye.png
        src/qt/res/wrk/icons1/eye_minus.png
        src/qt/res/wrk/icons1/eye_plus.png
        src/qt/res/wrk/icons1/filesave.png
        src/qt/res/wrk/icons1/history.png
        src/qt/res/wrk/icons1/import.png
        src/qt/res/wrk/icons1/info.png
        src/qt/res/wrk/icons1/key.png
        src/qt/res/wrk/icons1/lock_closed.png
        src/qt/res/wrk/icons1/lock_open.png
        src/qt/res/wrk/icons1/masternodes.png
        src/qt/res/wrk/icons1/notsynced.png
        src/qt/res/wrk/icons1/overview.png
        src/qt/res/wrk/icons1/privacy.png
        src/qt/res/wrk/icons1/qrcode.png
        src/qt/res/wrk/icons1/quit.png
        src/qt/res/wrk/icons1/receive.png
        src/qt/res/wrk/icons1/remove.png
        src/qt/res/wrk/icons1/send.png
        src/qt/res/wrk/icons1/staking_active.png
        src/qt/res/wrk/icons1/staking_inactive.png
        src/qt/res/wrk/icons1/synced.png
        src/qt/res/wrk/icons1/trade.png
        src/qt/res/wrk/icons1/transaction0.png
        src/qt/res/wrk/icons1/transaction2.png
        src/qt/res/wrk/icons1/transaction_conflicted.png
        src/qt/res/wrk/icons1/tx_inout.png
        src/qt/res/wrk/icons1/tx_input.png
        src/qt/res/wrk/icons1/tx_mined.png
        src/qt/res/wrk/icons1/tx_output.png
        "src/qt/res/wrk/images — копия/about.png"
        "src/qt/res/wrk/images — копия/downArrow.png"
        "src/qt/res/wrk/images — копия/downArrow_small.png"
        "src/qt/res/wrk/images — копия/header.png"
        "src/qt/res/wrk/images — копия/leftArrow_small.png"
        "src/qt/res/wrk/images — копия/qtreeview_selected.png"
        "src/qt/res/wrk/images — копия/rightArrow_small.png"
        "src/qt/res/wrk/images — копия/splash.png"
        "src/qt/res/wrk/images — копия/splash_testnet.png"
        "src/qt/res/wrk/images — копия/upArrow_small.png"
        "src/qt/res/wrk/images — копия/walletFrame.png"
        "src/qt/res/wrk/images — копия/walletFrame_bg (copy 1).png"
        "src/qt/res/wrk/images — копия/walletFrame_bg.png"
        src/qt/res/somnio-qt-res.rc
        src/qt/res/somnio-qt-res.rc
        src/qt/test/paymentrequestdata.h
        src/qt/test/paymentservertests.cpp
        src/qt/test/paymentservertests.h
        src/qt/test/test_main.cpp
        src/qt/test/uritests.cpp
        src/qt/test/uritests.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bip38tooldialog.cpp
        src/qt/bip38tooldialog.h
        src/qt/bitcoinaddressvalidator.cpp
        src/qt/bitcoinaddressvalidator.h
        src/qt/bitcoinamountfield.cpp
        src/qt/bitcoinamountfield.h
        src/qt/bitcoingui.cpp
        src/qt/bitcoingui.h
        src/qt/bitcoinunits.cpp
        src/qt/bitcoinunits.h
        src/qt/blockexplorer.cpp
        src/qt/blockexplorer.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/intro.cpp
        src/qt/intro.h
        src/qt/macdockiconhandler.h
        src/qt/macdockiconhandler.mm
        src/qt/macnotificationhandler.h
        src/qt/macnotificationhandler.mm
        src/qt/masternodelist.cpp
        src/qt/masternodelist.h
        src/qt/multisenddialog.cpp
        src/qt/multisenddialog.h
        src/qt/multisigdialog.cpp
        src/qt/multisigdialog.h
        src/qt/networkstyle.cpp
        src/qt/networkstyle.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/obfuscationconfig.cpp
        src/qt/obfuscationconfig.h
        src/qt/openuridialog.cpp
        src/qt/openuridialog.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/paymentrequest.proto
        src/qt/paymentrequestplus.cpp
        src/qt/paymentrequestplus.h
        src/qt/paymentserver.cpp
        src/qt/paymentserver.h
        src/qt/peertablemodel.cpp
        src/qt/peertablemodel.h
        src/qt/platformstyle.cpp
        src/qt/platformstyle.h
        src/qt/privacydialog.cpp
        src/qt/privacydialog.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/receivecoinsdialog.cpp
        src/qt/receivecoinsdialog.h
        src/qt/receiverequestdialog.cpp
        src/qt/receiverequestdialog.h
        src/qt/recentrequeststablemodel.cpp
        src/qt/recentrequeststablemodel.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/somnio.cpp
        src/qt/somnio.qrc
        src/qt/somnio_locale.qrc
        src/qt/splashscreen.cpp
        src/qt/splashscreen.h
        src/qt/trafficgraphwidget.cpp
        src/qt/trafficgraphwidget.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/utilitydialog.cpp
        src/qt/utilitydialog.h
        src/qt/walletframe.cpp
        src/qt/walletframe.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/qt/walletmodeltransaction.cpp
        src/qt/walletmodeltransaction.h
        src/qt/walletview.cpp
        src/qt/walletview.h
        src/qt/winshutdownmonitor.cpp
        src/qt/winshutdownmonitor.h
        src/qt/zsomniocontroldialog.cpp
        src/qt/zsomniocontroldialog.h
        src/script/bitcoinconsensus.cpp
        src/script/bitcoinconsensus.h
        src/script/interpreter.cpp
        src/script/interpreter.h
        src/script/script.cpp
        src/script/script.h
        src/script/script_error.cpp
        src/script/script_error.h
        src/script/sigcache.cpp
        src/script/sigcache.h
        src/script/sign.cpp
        src/script/sign.h
        src/script/standard.cpp
        src/script/standard.h
        src/secp256k1/include/secp256k1.h
        src/secp256k1/obj/.gitignore
        src/secp256k1/src/java/org/bitcoin/NativeSecp256k1.java
        src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.c
        src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.h
        src/secp256k1/src/bench_inv.c
        src/secp256k1/src/bench_sign.c
        src/secp256k1/src/bench_verify.c
        src/secp256k1/src/ecdsa.h
        src/secp256k1/src/ecdsa_impl.h
        src/secp256k1/src/eckey.h
        src/secp256k1/src/eckey_impl.h
        src/secp256k1/src/ecmult.h
        src/secp256k1/src/ecmult_gen.h
        src/secp256k1/src/ecmult_gen_impl.h
        src/secp256k1/src/ecmult_impl.h
        src/secp256k1/src/field.h
        src/secp256k1/src/field_10x26.h
        src/secp256k1/src/field_10x26_impl.h
        src/secp256k1/src/field_5x52.h
        src/secp256k1/src/field_5x52_asm.asm
        src/secp256k1/src/field_5x52_asm_impl.h
        src/secp256k1/src/field_5x52_impl.h
        src/secp256k1/src/field_5x52_int128_impl.h
        src/secp256k1/src/field_gmp.h
        src/secp256k1/src/field_gmp_impl.h
        src/secp256k1/src/field_impl.h
        src/secp256k1/src/group.h
        src/secp256k1/src/group_impl.h
        src/secp256k1/src/num.h
        src/secp256k1/src/num_gmp.h
        src/secp256k1/src/num_gmp_impl.h
        src/secp256k1/src/num_impl.h
        src/secp256k1/src/scalar.h
        src/secp256k1/src/scalar_4x64.h
        src/secp256k1/src/scalar_4x64_impl.h
        src/secp256k1/src/scalar_8x32.h
        src/secp256k1/src/scalar_8x32_impl.h
        src/secp256k1/src/scalar_impl.h
        src/secp256k1/src/secp256k1.c
        src/secp256k1/src/testrand.h
        src/secp256k1/src/testrand_impl.h
        src/secp256k1/src/tests.c
        src/secp256k1/src/util.h
        src/secp256k1/.gitignore
        src/secp256k1/.travis.yml
        src/secp256k1/autogen.sh
        src/secp256k1/configure.ac
        src/secp256k1/COPYING
        src/secp256k1/libsecp256k1.pc.in
        src/secp256k1/Makefile.am
        src/secp256k1/nasm_lt.sh
        src/secp256k1/README.md
        src/secp256k1/TODO
        src/test/data/alertTests.raw
        src/test/data/base58_encode_decode.json
        src/test/data/base58_keys_invalid.json
        src/test/data/base58_keys_valid.json
        src/test/data/bitcoin-util-test.json
        src/test/data/blanktx.hex
        src/test/data/README.md
        src/test/data/script_invalid.json
        src/test/data/script_valid.json
        src/test/data/sig_canonical.json
        src/test/data/sig_noncanonical.json
        src/test/data/sighash.json
        src/test/data/tt-delin1-out.hex
        src/test/data/tt-delout1-out.hex
        src/test/data/tt-locktime317000-out.hex
        src/test/data/tx394b54bb.hex
        src/test/data/tx_invalid.json
        src/test/data/tx_valid.json
        src/test/data/txcreate1.hex
        src/test/data/txcreate2.hex
        src/test/data/txcreatesign.hex
        src/test/accounting_tests.cpp
        src/test/alert_tests.cpp
        src/test/allocator_tests.cpp
        src/test/arith_uint256_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bctest.py
        src/test/benchmark_zerocoin.cpp
        src/test/bignum.h
        src/test/bip32_tests.cpp
        src/test/bitcoin-util-test.py
        src/test/bloom_tests.cpp
        src/test/buildenv.py.in
        src/test/checkblock_tests.cpp
        src/test/Checkpoints_tests.cpp
        src/test/coins_tests.cpp
        src/test/compress_tests.cpp
        src/test/crypto_tests.cpp
        src/test/DoS_tests.cpp
        src/test/getarg_tests.cpp
        src/test/hash_tests.cpp
        src/test/key_tests.cpp
        src/test/libzerocoin_tests.cpp
        src/test/main_tests.cpp
        src/test/mempool_tests.cpp
        src/test/miner_tests.cpp
        src/test/mruset_tests.cpp
        src/test/multisig_tests.cpp
        src/test/netbase_tests.cpp
        src/test/pmt_tests.cpp
        src/test/README.md
        src/test/rpc_tests.cpp
        src/test/rpc_wallet_tests.cpp
        src/test/sanity_tests.cpp
        src/test/script_P2SH_tests.cpp
        src/test/script_tests.cpp
        src/test/scriptnum_tests.cpp
        src/test/serialize_tests.cpp
        src/test/sighash_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/skiplist_tests.cpp
        src/test/test_somnio.cpp
        src/test/test_somnio.cpp
        src/test/test_zerocoin.cpp
        src/test/timedata_tests.cpp
        src/test/torcontrol_tests.cpp
        src/test/transaction_tests.cpp
        src/test/tutorial_zerocoin.cpp
        src/test/uint256_tests.cpp
        src/test/univalue_tests.cpp
        src/test/util_tests.cpp
        src/test/wallet_tests.cpp
        src/test/zerocoin_denomination_tests.cpp
        src/test/zerocoin_implementation_tests.cpp
        src/test/zerocoin_transactions_tests.cpp
        src/univalue/gen.cpp
        src/univalue/libbitcoin_univalue.a
        src/univalue/univalue.cpp
        src/univalue/univalue.h
        src/univalue/univalue_escapes.h
        src/univalue/univalue_read.cpp
        src/univalue/univalue_write.cpp
        src/zmq/zmqabstractnotifier.cpp
        src/zmq/zmqabstractnotifier.h
        src/zmq/zmqconfig.h
        src/zmq/zmqnotificationinterface.cpp
        src/zmq/zmqnotificationinterface.h
        src/zmq/zmqpublishnotifier.cpp
        src/zmq/zmqpublishnotifier.h
        src/.clang-format
        src/accumulatormap.cpp
        src/accumulatormap.h
        src/accumulators.cpp
        src/accumulators.h
        src/activemasternode.cpp
        src/activemasternode.h
        src/addrman.cpp
        src/addrman.h
        src/alert.cpp
        src/alert.h
        src/allocators.cpp
        src/allocators.h
        src/amount.cpp
        src/amount.h
        src/arith_uint256.cpp
        src/arith_uint256.h
        src/base58.cpp
        src/base58.h
        src/bip38.cpp
        src/bip38.h
        src/bloom.cpp
        src/bloom.h
        src/chain.cpp
        src/chain.h
        src/chainparams.cpp
        src/chainparams.h
        src/chainparamsbase.cpp
        src/chainparamsbase.h
        src/chainparamsseeds.h
        src/checkpoints.cpp
        src/checkpoints.h
        src/checkqueue.h
        src/clientversion.cpp
        src/clientversion.h
        src/coincontrol.h
        src/coins.cpp
        src/coins.h
        src/compat.h
        src/compressor.cpp
        src/compressor.h
        src/core_io.h
        src/core_read.cpp
        src/core_write.cpp
        src/crypter.cpp
        src/crypter.h
        src/db.cpp
        src/db.h
        src/denomination_functions.cpp
        src/denomination_functions.h
        src/eccryptoverify.cpp
        src/eccryptoverify.h
        src/ecwrapper.cpp
        src/ecwrapper.h
        src/hash.cpp
        src/hash.h
        src/init.cpp
        src/init.h
        src/kernel.cpp
        src/kernel.h
        src/key.cpp
        src/key.h
        src/keystore.cpp
        src/keystore.h
        src/leveldbwrapper.cpp
        src/leveldbwrapper.h
        src/libbitcoin_cli.a
        src/libbitcoin_common.a
        src/libbitcoin_util.a
        src/libbitcoin_zmq.a
        src/limitedmap.h
        src/main.cpp
        src/main.h
        src/Makefile.am
        src/Makefile.in
        src/Makefile.qt.include
        src/Makefile.qttest.include
        src/Makefile.test.include
        src/masternode-budget.cpp
        src/masternode-budget.h
        src/masternode-payments.cpp
        src/masternode-payments.h
        src/masternode-sync.cpp
        src/masternode-sync.h
        src/masternode.cpp
        src/masternode.h
        src/masternodeconfig.cpp
        src/masternodeconfig.h
        src/masternodeman.cpp
        src/masternodeman.h
        src/merkleblock.cpp
        src/merkleblock.h
        src/miner.cpp
        src/miner.h
        src/mruset.h
        src/net.cpp
        src/net.h
        src/netbase.cpp
        src/netbase.h
        src/noui.cpp
        src/noui.h
        src/obfuscation-relay.cpp
        src/obfuscation-relay.h
        src/obfuscation.cpp
        src/obfuscation.h
        src/pow.cpp
        src/pow.h
        src/prevector.h
        src/protocol.cpp
        src/protocol.h
        src/pubkey.cpp
        src/pubkey.h
        src/random.cpp
        src/random.h
        src/rest.cpp
        src/reverse_iterate.h
        src/rpcblockchain.cpp
        src/rpcclient.cpp
        src/rpcclient.h
        src/rpcdump.cpp
        src/rpcmasternode-budget.cpp
        src/rpcmasternode.cpp
        src/rpcmining.cpp
        src/rpcmisc.cpp
        src/rpcnet.cpp
        src/rpcprotocol.cpp
        src/rpcprotocol.h
        src/rpcrawtransaction.cpp
        src/rpcserver.cpp
        src/rpcserver.h
        src/rpcwallet.cpp
        src/serialize.h
        src/somnio-cli-res.rc
        src/somnio-cli.cpp
        src/somnio-tx.cpp
        src/somniod-res.rc
        src/somniod.cpp
        src/spork.cpp
        src/spork.h
        src/sporkdb.cpp
        src/sporkdb.h
        src/streams.h
        src/swifttx.cpp
        src/swifttx.h
        src/sync.cpp
        src/sync.h
        src/threadsafety.h
        src/timedata.cpp
        src/timedata.h
        src/tinyformat.h
        src/torcontrol.cpp
        src/torcontrol.h
        src/somnio-cli-res.rc
        src/somnio-cli.cpp
        src/somnio-tx.cpp
        src/somniod-res.rc
        src/somniod.cpp
        src/txdb.cpp
        src/txdb.h
        src/txmempool.cpp
        src/txmempool.h
        src/ui_interface.h
        src/uint256.cpp
        src/uint256.h
        src/uint512.h
        src/undo.h
        src/util.cpp
        src/util.h
        src/utilmoneystr.cpp
        src/utilmoneystr.h
        src/utilstrencodings.cpp
        src/utilstrencodings.h
        src/utiltime.cpp
        src/utiltime.h
        src/validationinterface.cpp
        src/validationinterface.h
        src/version.h
        src/wallet.cpp
        src/wallet.h
        src/wallet_ismine.cpp
        src/wallet_ismine.h
        src/walletdb.cpp
        src/walletdb.h
        aclocal.m4
        autogen.sh
        configure.ac
        CONTRIBUTING.md
        COPYING
        INSTALL
        LICENSE
        Makefile
        Makefile.am
        Makefile.in
        pkg.m4
        README.md)
